Changelog
=========

2.6.9 (unreleased)
------------------

- Nothing changed yet.


2.6.8 (2012-07-03)
------------------

- Improve the default template for content aggregation, we use tabled based layout now
  [derstappenit]

- Improve the output template, we use tabled based layout now
  [derstappenit]

- improve support for @@images view in image urls


2.6.7 (2012.06.11)
------------------

- Fix translations
  [derstappenit]


2.6.6 (2012-06-04)
------------------

- Added Danish translation.
  [malthe]

- Add mailonly filter, to allow elements only in mails but not in public view
  [derstappenit]

- Add support for @@images view in image urls
  [derstappenit]


2.6.5 (2012-05-04)
------------------

- include mo files in MANIFEST, so that they are included in the package
  [derstappenit]

2.6.4 (2012-05-03)
------------------

- add german translations
  [derstappenit]


2.6.3 (2012-04-30)
------------------

- don't override the issue content after first saving
  [derstappenit]

- rename aggregate action and move this action to object_buttons (actions menu)
  [derstappenit]


2.6.2 (2012-04-20)
------------------

- Improved handling utf-8 strings for the import and export for members
  [frapell]

- Added stoneagehtml package for processing the newsletter's html before
  sending it by mail. This add support for css declararions that will be
  written directly into the html tags to improve rendering results in
  email clients.
  [nueces]

- Added Spanish translation.
  [nueces]

- Fix rendering of images in email-clients.
  [wimbou, WouterVH]

- Fix non-ASCII chars in headers. This fixes
  http://plone.org/products/easynewsletter/issues/17 and
  http://plone.org/products/easynewsletter/issues/19
  [regisrouet, WouterVH]

- Fix breaking dexterity by checking on portal_type instead of meta_type.
  [WouterVH]

- When a subscriber is created via addSubscriber, set language same as newsletter.
  (merged from branch-bpi-rouet-2011-9)
  [regisrouet, WouterVH]
