@@ -153,6 +153,7 @@ clear: both;
       <td class="header">
         <!-- this is the header of the newsletter -->
         <span tal:replace="structure context/getHeader" />
+        <span tal:replace="structure python:toLocalizedTime(context.modified(), long_format=0)" />
       </td>
     </tr>
     <tr>
