@@ -402,6 +402,29 @@ class EasyNewsletter(ATTopic, atapi.BaseFolder):
                 result.add(utility[0], utility[0])
         return result
 
+    def get_send_issues(self):
+        """ return sended issues brains"""
+        issues = self.portal_catalog(
+            portal_type='ENLIssue',
+            review_state='sent',
+            sort_on='modified',
+            sort_order='reverse',
+            path='/'.join(self.getPhysicalPath())
+        )
+        return issues
+
+    def get_draft_issues(self):
+        """ return draft issues brains"""
+        issues = self.portal_catalog(
+            portal_type='ENLIssue',
+            review_state='draf',
+            sort_on='modified',
+            sort_order='reverse',
+            path='/'.join(self.getPhysicalPath())
+        )
+        return issues
+
+
 
 atapi.registerType(EasyNewsletter, config.PROJECTNAME)
 
